[b]Version 0.6.7[/b]:

(2009-02-04)
 * Now the default value for the "correct pts" option is auto.
 * Now the default cache for files is 0, as it seems setting a cache
   cause problems with some formats (like mp4 and mov).

(2009-01-31)
 * (Videopreview) Added a new option to remember the last folder used for
   saving the preview image. If not checked, it will suggest the same
   folder of the video to save the image.
 * New action toggle_stay_on_top, which toggles between "stay on top always" 
   and "stay on top never". If "stay on top while playing" is enabled, this
   action does nothing.

(2009-01-29)
 * Added two options (in the audio and subtitle menus) to allow the user to 
   enter the audio and subtitle delay (in milliseconds).

(2009-01-28)
 * Added names for the rest of dvdnav actions.
 * The dvdnav_mouse action is assigned to the left mouse button by default.
 * Added all dvdnav actions to the list of actions that can be selected with
   the mouse buttons.

(2009-01-27)
 * Fix: now spaces in arguments for mplayer (in Preferences->Advanced and 
   Options->View info and properties) are respected if they are between
   quotes. Now for instance this will work as expected:
     -heartbeat-cmd "gnome-screensaver-command -p &"
 * Fix: the playlist is not allowed to be docked in fullscreen mode.

(2009-01-26)
 * (Playlist) When a file is added to the playlist, if it was already in
   the list, it's moved to the end of the list.

(2009-01-24)
 * (Videopreview) Add jpg to the "extract frame as" combobox only if the
   jpg format is available for reading.
 * The direct3d video output is now the default for Windows Vista (untested).

(2009-01-18)
 * The dvdnav actions are now only enabled when playing a dvd (using dvdnav).

(2009-01-17)
 * Now the mplayer process is not restarted when loading an external subtitle
   file (using the sub_load slave command), except for idx/sub subtitles. 

(2009-01-15)